--- a/.github/workflows/APIdoc.yaml
+++ b/.github/workflows/APIdoc.yaml
@@ -13,12 +13,6 @@ on:
   # branch is able to be deployed.
   # Any trigger not matching the 'main' branch will work, but the workflow
   # will always fail for security reasons.
-  # For example, the following trigger will not success...
-  #
-  # push:
-  #  tags:
-  #    - '[0-9]+.[0-9]+.[0-9]+'
-  #
   push:
     branches:
       - 'main'
@@ -38,6 +32,7 @@ jobs:
       - name: Run D'oxygen
         uses: mattnotmitt/doxygen-action@v1.9.4
         with:
+          working-directory: '${{ github.workspace }}'
           doxyfile-path: 'Doxyfile'
           # NOTE: output directory is configured in Doxyfile.
           # Should point to:
