--- a/.github/workflows/APIdoc.yaml
+++ b/.github/workflows/APIdoc.yaml
@@ -17,7 +17,8 @@ on:
     branches:
       - 'main'
     paths:
-      - 'dip.hpp'
+      - '**.hpp'
+      - 'Doxyfile'
   workflow_dispatch:
 
 jobs:
